@@ -19,7 +19,7 @@ public class AppTest {
   public void testApp() {
     @SuppressWarnings("unchecked")
     LinkedList<String> mockedList = mock(LinkedList.class);
-    when(mockedList.get(0)).thenReturn("Template App");
+    when(mockedList.getFirst()).thenReturn("Template App");
     assertThat(App.msg, equalTo(mockedList.get(0)));
   }
 }
